--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "chromatic": "npx chromatic --project-token=f7c61765ad52",
+    "chromatic-build": "npx chromatic --project-token=f7c61765ad52 --force-rebuild"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +49,7 @@
     "@storybook/manager-webpack4": "^6.5.5",
     "@storybook/react": "^6.5.5",
     "@storybook/testing-library": "^0.0.11",
-    "babel-loader": "^8.2.5"
+    "babel-loader": "^8.2.5",
+    "chromatic": "^6.5.4"
   }
 }
