--- a/package.json
+++ b/package.json
@@ -1,7 +1,24 @@
 {
-  "name": "my-storybook",
+  "name": "alexdelahaba-my-storybook",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "license": "MIT",
+  "typings": "dist/index.d.ts",
+  "main": "dist/index.js",
+  "homepage": "www.mypaginapersona.com",
+  "repository": {
+    "url": "https://github.com/alexdelahaba/storybook-example",
+    "type": "git"
+  },
+  "release": {
+    "branches": [
+      "main"
+    ]
+  },
+  "files": [
+    "dist",
+    "src"
+  ],
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -17,6 +34,7 @@
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
+    "build": "",
     "build-storybook": "build-storybook",
     "chromatic": "npx chromatic --project-token=f7c61765ad52",
     "chromatic-build": "npx chromatic --project-token=f7c61765ad52 --force-rebuild"
