--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-dom": "^18.0.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "rimraf": "^3.0.2",
     "typescript": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
