--- a/package.json
+++ b/package.json
@@ -27,19 +27,32 @@
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
-    "react": "^18.1.0",
+    "react": ">=16",
     "react-dom": "^18.1.0",
     "rimraf": "^3.0.2",
+    "semantic-release": "^19.0.2",
     "typescript": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
+  "peerDependencies": {
+    "react": ">=16"
+  },
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/changelog",
+    "@semantic-release/github",
+    "@semantic-release/npm",
+    "@semantic-release/git"
+  ],
   "scripts": {
     "storybook": "start-storybook -p 6006",
-    "build": "",
+    "build": "npm run clean && tsc && npm run copy-files",
     "build-storybook": "build-storybook",
     "chromatic": "npx chromatic --project-token=f7c61765ad52",
     "chromatic-build": "npx chromatic --project-token=f7c61765ad52 --force-rebuild",
-    "clean": "rimraf dist/"
+    "clean": "rimraf dist/",
+    "copy-files": "copyfiles -u 1 src/**/*.css dist/"
   },
   "eslintConfig": {
     "extends": [
