feat: package.json fixed (?)

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "url": "https://github.com/alexdelahaba/storybook-example",
     "type": "git"
   },
+  "peerDependencies": {
+    "react": ">=16"
+  },
   "release": {
     "branches": [
       "main"
@@ -20,37 +23,25 @@
     "src"
   ],
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.1",
-    "@types/node": "^16.11.36",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.5",
-    "react": ">=16",
-    "react-dom": "^18.1.0",
-    "rimraf": "^3.0.2",
-    "semantic-release": "^19.0.2",
-    "typescript": "^4.7.2",
-    "web-vitals": "^2.1.4"
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "postcss": "^8.3.9",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "typescript": "^4.1.2",
+    "web-vitals": "^1.0.1"
   },
-  "peerDependencies": {
-    "react": ">=16"
-  },
-  "plugins": [
-    "@semantic-release/commit-analyzer",
-    "@semantic-release/release-notes-generator",
-    "@semantic-release/changelog",
-    "@semantic-release/github",
-    "@semantic-release/npm",
-    "@semantic-release/git"
-  ],
   "scripts": {
+    "start": "start-storybook -p 6006",
+    "build": "yarn clean && tsc && yarn copy-files",
     "storybook": "start-storybook -p 6006",
-    "build": "npm run clean && tsc && npm run copy-files",
     "build-storybook": "build-storybook",
-    "chromatic": "npx chromatic --project-token=f7c61765ad52",
-    "chromatic-build": "npx chromatic --project-token=f7c61765ad52 --force-rebuild",
+    "chromatic": "npx chromatic --project-token=b53333a09638",
     "clean": "rimraf dist/",
     "copy-files": "copyfiles -u 1 src/**/*.css dist/"
   },
@@ -73,16 +64,25 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.18.0",
-    "@storybook/addon-actions": "^6.5.5",
-    "@storybook/addon-essentials": "^6.5.5",
-    "@storybook/addon-interactions": "^6.5.5",
-    "@storybook/addon-links": "^6.5.5",
-    "@storybook/builder-webpack4": "^6.5.5",
-    "@storybook/manager-webpack4": "^6.5.5",
-    "@storybook/react": "^6.5.5",
-    "@storybook/testing-library": "^0.0.11",
-    "babel-loader": "^8.2.5",
-    "chromatic": "^6.5.4"
-  }
+    "@babel/core": "^7.15.8",
+    "@storybook/addon-actions": "^6.3.12",
+    "@storybook/addon-essentials": "^6.3.12",
+    "@storybook/addon-links": "^6.3.12",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/react": "^6.3.12",
+    "babel-loader": "^8.2.2",
+    "chromatic": "^6.0.4",
+    "copyfiles": "^2.4.1",
+    "css-loader": "^6.4.0",
+    "rimraf": "^3.0.2",
+    "semantic-release": "^18.0.0"
+  },
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/changelog",
+    "@semantic-release/github",
+    "@semantic-release/npm",
+    "@semantic-release/git"
+  ]
 }
