--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "src"
   ],
   "dependencies": {
+    "@storybook/testing-library": "^0.0.11",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -31,7 +32,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "postcss": "^8.3.9",
-    "react": "^17.0.2",
+    "react": ">=16",
     "react-dom": "^17.0.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -41,7 +42,7 @@
     "build": "yarn clean && tsc && yarn copy-files",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "chromatic": "npx chromatic --project-token=b53333a09638",
+    "chromatic": "npx chromatic --project-token=f7c61765ad52",
     "clean": "rimraf dist/",
     "copy-files": "copyfiles -u 1 src/**/*.css dist/"
   },
